--- a/styles.css
+++ b/styles.css
@@ -3,4 +3,15 @@ button {
   color: aqua;
 }
 
+#map {
+  width: auto;
+  height: auto;
+  text-align: center;
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+}
+
 /*# sourceMappingURL=styles.css.map */
